<resources>
    <string name="app_name">Find Film</string>
    <string name="button_1">МЕНЮ</string>
    <string name="button_2">ИЗБРАННОЕ</string>
    <string name="button_3">СМОТРЕТЬ ПОЗЖЕ</string>
    <string name="button_4">ПОДБОРКИ</string>
    <string name="button_5">НАСТРОЙКИ</string>
    <string name="disclaimer">Постеры предоставлены https://www.movieposters.com/</string>
    <string name="favorite_string">Избранное</string>
    <string name="search_string">Поиск</string>
    <string name="more">Доп. функции</string>
    <string name="settings_string">Настройки</string>
    <string name="menu_string">Меню</string>
    <string name="watch_later_string">Смотреть позже</string>
    <string name="different_string">Подборки</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home_title_text">Меню</string>
    <string name="menu_settings_title_text">Настройки</string>

    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>

    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
</resources>