<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home_title_text"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/round_favorite_24"
        android:title="@string/favorite_string"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/round_watch_later_24"
        android:title="@string/watch_later_string"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/selections"
        android:icon="@drawable/round_different_24"
        android:title="@string/different_string"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/round_settings_24"
        android:title="@string/settings_string"
        app:showAsAction="withText"/>
</menu>